build: enhance UI register animal

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -169,8 +169,16 @@
                   <input id="inline-animal-cow" type="text" placeholder="e.g., 123-45" autocomplete="off" required>
                 </div>
                 <div class="form-field">
+                  <label for="inline-pr-animal-cow">PR Animal (opcional)</label>
+                  <input id="inline-pr-animal-cow" type="text" placeholder="e.g., PR-12345" autocomplete="off">
+                </div>
+                <div class="form-field">
                   <label for="inline-mother-cow">Madre ID (opcional)</label>
                   <input id="inline-mother-cow" type="text" placeholder="e.g., 67890" autocomplete="off">
+                </div>
+                <div class="form-field">
+                  <label for="inline-pr-mother-cow">PR Madre (opcional)</label>
+                  <input id="inline-pr-mother-cow" type="text" placeholder="e.g., PR-67890" autocomplete="off">
                 </div>
                 <div class="form-field">
                   <label for="inline-father-cow">Padre ID (opcional)</label>
@@ -183,6 +191,10 @@
                 <div class="form-field">
                   <label for="inline-weight-cow">Peso (kg, opcional)</label>
                   <input id="inline-weight-cow" type="number" step="0.01" min="0" placeholder="e.g., 250.5" autocomplete="off">
+                </div>
+                <div class="form-field">
+                  <label for="inline-mother-weight-cow">Peso de la Madre (kg, opcional)</label>
+                  <input id="inline-mother-weight-cow" type="number" step="0.01" min="0" placeholder="e.g., 450.0" autocomplete="off">
                 </div>
                 <div class="form-field">
                   <label for="inline-gender-cow">Sexo (opcional)</label>
