fix: pr naming error

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -169,16 +169,16 @@
                   <input id="inline-animal-cow" type="text" placeholder="e.g., 123-45" autocomplete="off" required>
                 </div>
                 <div class="form-field">
-                  <label for="inline-pr-animal-cow">PR Animal (opcional)</label>
-                  <input id="inline-pr-animal-cow" type="text" placeholder="e.g., PR-12345" autocomplete="off">
+                  <label for="inline-rp-animal-cow">RP Animal (opcional)</label>
+                  <input id="inline-rp-animal-cow" type="text" placeholder="e.g., RP-12345" autocomplete="off">
                 </div>
                 <div class="form-field">
                   <label for="inline-mother-cow">Madre ID (opcional)</label>
                   <input id="inline-mother-cow" type="text" placeholder="e.g., 67890" autocomplete="off">
                 </div>
                 <div class="form-field">
-                  <label for="inline-pr-mother-cow">PR Madre (opcional)</label>
-                  <input id="inline-pr-mother-cow" type="text" placeholder="e.g., PR-67890" autocomplete="off">
+                  <label for="inline-rp-mother-cow">RP Madre (opcional)</label>
+                  <input id="inline-rp-mother-cow" type="text" placeholder="e.g., RP-67890" autocomplete="off">
                 </div>
                 <div class="form-field">
                   <label for="inline-father-cow">Padre ID (opcional)</label>
