--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="theme-color" content="#0f766e">
   <link rel="manifest" href="manifest.json">
-  <link rel="icon" href="icon-192.jpg" sizes="192x192">
-  <link rel="apple-touch-icon" href="icon-192.jpg">
+  <link rel="icon" href="logo.jpg" sizes="192x192">
+  <link rel="apple-touch-icon" href="logo.jpg">
   <link rel="stylesheet" href="styles.css">
   <title>LiveStock</title>
   <script defer src="/_vercel/insights/script.js"></script>
