fix: index name

--- a/react-redesign/index.html
+++ b/react-redesign/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>LiveStock - Gestión de Ganado</title>
-    <meta name="description" content="Sistema moderno de gestión de ganado con métricas avanzadas y seguimiento de inseminaciones" />
+    <title>TAG - Trazabilidad Ganadera</title>
+    <meta name="description" content="Sistema de trazabilidad ganadera con métricas avanzadas y seguimiento de inseminaciones" />
     
     <!-- PWA Manifest -->
     <link rel="manifest" href="/manifest.json" />
@@ -14,7 +14,7 @@
     <meta name="theme-color" content="#0f766e" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-    <meta name="apple-mobile-web-app-title" content="LiveStock" />
+    <meta name="apple-mobile-web-app-title" content="TAG" />
     <meta name="msapplication-TileColor" content="#0f172a" />
     <meta name="msapplication-config" content="/browserconfig.xml" />
     
